sample-node/prod-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-node
spec:
  template:
    spec:
      containers:
        - image: nalbam/sample-node:v0.1.11
          name: sample-node
          resources:
            limits:
              cpu: 120m
              memory: 153Mi
            requests:
              cpu: 100m
              memory: 128Mi
