sample-node/prod-demo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: sample-node
    app.kubernetes.io/name: sample-node
  name: sample-node
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: sample-node.demo.mzdev.be
      http:
        paths:
          - backend:
              serviceName: sample-node
              servicePort: 80
            path: /
    - host: sample-node.demo.nalbam.com
      http:
        paths:
          - backend:
              serviceName: sample-node
              servicePort: 80
            path: /
  tls:
    - hosts:
        - sample-node.demo.mzdev.be
      secretName: sample-node-mzdev-tls
    - hosts:
        - sample-node.demo.nalbam.com
      secretName: sample-node-nalbam-tls
